# FIP_SIT151_Projet

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  compil.sh  readme.md
cmake/: FindSDL.cmake  FindSDL_image.cmake  FindSDL_mixer.cmake  FindSDL_net.cmake  FindSDL_sound.cmake  FindSDL_ttf.cmake
inc/: linkedlist.h  score.h  trace.h
old/: Makefile  Makefile0
src/: level.c  linkedlist.c  main.c  score.c  trace.c
